# Buffalo-Urban-Forest-Info-Website

./: App.py  CovidAnalysis.ipynb  ajax.js  getInfoApp.py  getinfo.js  index.html  main.py  pyproject.toml  tree.csv  tree1.csv
